# vibium

./: .gitignore  CONTRIBUTING.md  FILESYSTEM.md  Makefile  README.md  V1-ROADMAP.md  V2-ROADMAP.md
clicker/cmd/clicker/: main.go
clients/javascript/src/: browser.ts  index.ts  vibe.ts
clients/javascript/src/clicker/: process.ts
clients/python/: README.md  pyproject.toml
clients/python/tests/: test_basic.py
docs/how-to-guides/: debugging.md  pypi-publishing.md
docs/plans/: python-client.md
docs/reference/: v1-roadmap.md
docs/tutorials/: claude-code-mcp-setup.md  getting-started-python.md  getting-started.md
docs/updates/: 2025-12-31-python-client.md
tests/js/: browser-modes.test.js  sample_test.js
